--- a/Source/Momntz.Worker.Tests/App.config
+++ b/Source/Momntz.Worker.Tests/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Environment" value="TEST" />
+    <add key="Environment" value="LOCAL" />
   </appSettings>
   <connectionStrings>
     <clear />
