Made nHibernate the primary data access strategy

--- a/Source/Momntz.Worker.Console/App.config
+++ b/Source/Momntz.Worker.Console/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Environment" value="PROD" />
+    <add key="Environment" value="LOCAL" />
   </appSettings>
   <connectionStrings>
     <clear />
-    <add connectionString="Data Source=192.168.1.109;Initial Catalog=Momntz;User Id=momntz;Password=folsom_1;" name="sql" />
+    <add connectionString="Data Source=127.0.0.1;Initial Catalog=LocalMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
