--- a/Source/Momntz.Worker.Tests/App.config
+++ b/Source/Momntz.Worker.Tests/App.config
@@ -5,7 +5,6 @@
   </appSettings>
   <connectionStrings>
     <clear />
-    <add connectionString="Data Source=localhost;Initial Catalog=NewMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
-    <add connectionString="Data Source=localhost;Initial Catalog=NewMomntz.Queue;User Id=momntz;Password=folsom_1;" name="queue" />
+    <add connectionString="Data Source=127.0.0.1;Initial Catalog=LocalMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
   </connectionStrings>
 </configuration>
