--- a/Source/Momntz.Worker/App.config
+++ b/Source/Momntz.Worker/App.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="cloudurl" value="" />
-    <add key="cloudaccount" value=""/>
-    <add key="cloudkey" value="" />
+    <add key="Environment" value="QA" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <connectionStrings>
+    <clear />
+    <add connectionString="Data Source=apollo;Initial Catalog=QAMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
+  </connectionStrings>
 </configuration>
