--- a/Source/Momntz.Worker.Console/App.config
+++ b/Source/Momntz.Worker.Console/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Environment" value="QA" />
+    <add key="Environment" value="LOCAL" />
   </appSettings>
   <connectionStrings>
     <clear />
-    <add connectionString="Data Source=Apollo;Initial Catalog=QAMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
+    <add connectionString="Data Source=Apollo;Initial Catalog=LocalMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
