--- a/Source/Momntz.Worker.Console/Momntz.Worker.Console.csproj
+++ b/Source/Momntz.Worker.Console/Momntz.Worker.Console.csproj
@@ -95,6 +95,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Momntz.Service\Momntz.Service.csproj">
+      <Project>{ca618b8f-ad10-4b4f-b469-1cf108ee311e}</Project>
+      <Name>Momntz.Service</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Momntz.Worker.Core\Momntz.Worker.Core.csproj">
       <Project>{8468247F-1C2B-4BD8-8D9F-D9303768759B}</Project>
       <Name>Momntz.Worker.Core</Name>
