--- a/Source/Momntz.Service/Momntz.Service.csproj
+++ b/Source/Momntz.Service/Momntz.Service.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ChuckConway.Cloud">
+      <HintPath>..\..\..\Momntz\Dependencies\ChuckConway\ChuckConway.Cloud.dll</HintPath>
+    </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\..\Dependencies\nHibernate\FluentNHibernate.dll</HintPath>
     </Reference>
@@ -41,9 +44,6 @@
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\Momntz.Worker\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.1.0\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Nancy">
-      <HintPath>..\Momntz.Worker\packages\Nancy.0.17.1\lib\net40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Momntz.Worker\packages\Newtonsoft.Json.5.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -66,9 +66,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISaga.cs" />
-    <Compile Include="ISagaOfT.cs" />
-    <Compile Include="Modules\Index.cs" />
     <Compile Include="Process.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -90,6 +87,10 @@
     <ProjectReference Include="..\..\..\Momntz\Source\Momntz\Momntz.csproj">
       <Project>{77cc17df-c471-42bf-b5f6-d55eaf918891}</Project>
       <Name>Momntz</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Momntz.Service.Plugins\Momntz.Service.Plugins.csproj">
+      <Project>{7671c257-c1ee-4d56-bb7b-b3fcf95601bd}</Project>
+      <Name>Momntz.Service.Plugins</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
