--- a/Source/Momntz.Service.Tests/App.config
+++ b/Source/Momntz.Service.Tests/App.config
@@ -2,5 +2,10 @@
 <configuration>
   <appSettings>
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://momntz.servicebus.windows.net/;SharedSecretIssuer=owner;SharedSecretValue=6d1C5tpI4JRCUqWZ1QxIx+4+M1uYZZgZiR2lYL2ieXw=" />
+    <add key="Environment" value="LOCAL" />
   </appSettings>
+  <connectionStrings>
+    <clear />
+    <add connectionString="Data Source=127.0.0.1;Initial Catalog=LocalMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
+  </connectionStrings>
 </configuration>
