Fixed issues. Implemented Windows Azure ServiceBus

--- a/Source/Momntz.Worker/Momntz.Worker.csproj
+++ b/Source/Momntz.Worker/Momntz.Worker.csproj
@@ -71,6 +71,16 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LOCAL|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\LOCAL\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hypersonic, Version=3.0.0.21, Culture=neutral, PublicKeyToken=6379ba783759c281, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
