--- a/Source/Momntz.Worker.Tests/Momntz.Worker.Tests.csproj
+++ b/Source/Momntz.Worker.Tests/Momntz.Worker.Tests.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Momntz.Worker.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <DontImportPostSharp>True</DontImportPostSharp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,6 +66,15 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LOCAL|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\LOCAL\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chucksoft.Core, Version=3.1.0.1, Culture=neutral, PublicKeyToken=3480c36974861ddd, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -81,6 +91,12 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\Billboard\Dependencies\nUnit\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="PostSharp">
+      <HintPath>..\Momntz.Worker\packages\PostSharp.3.0.28\lib\net20\PostSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PostSharp.Patterns.Diagnostics">
+      <HintPath>..\Momntz.Worker\packages\PostSharp.Patterns.Diagnostics.3.0.28\lib\net40\PostSharp.Patterns.Diagnostics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -94,6 +110,7 @@
     <Compile Include="Integration\QueueServiceTests.cs" />
     <Compile Include="Integration\ServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequiresPostSharp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Unit\" />
@@ -108,8 +125,11 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Momntz.Worker.Tests.psproj" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\Momntz.Worker\packages\PostSharp.3.0.28\tools\PostSharp.targets" Condition="Exists('..\Momntz.Worker\packages\PostSharp.3.0.28\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
