--- a/Source/Momntz.Service.Plugins/Momntz.Service.Plugins.csproj
+++ b/Source/Momntz.Service.Plugins/Momntz.Service.Plugins.csproj
@@ -57,6 +57,10 @@
     <Reference Include="NHibernate">
       <HintPath>..\Momntz.Worker.Core\bin\DEV\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="PostSharp, Version=3.0.31.9, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\PostSharp.3.0.31\lib\net20\PostSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -75,6 +79,7 @@
     <Compile Include="Media\Types\IMediaTypes.cs" />
     <Compile Include="Media\Types\Videos\VideoProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequiresPostSharp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Email\" />
@@ -85,8 +90,11 @@
       <Name>Momntz</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\Momntz.Worker\packages\PostSharp.3.0.28\tools\PostSharp.targets" Condition="Exists('..\Momntz.Worker\packages\PostSharp.3.0.28\tools\PostSharp.targets')" />
+  <Import Project="..\packages\PostSharp.3.0.31\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.31\tools\PostSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
