--- a/Source/Momntz.Service.Tests/packages.config
+++ b/Source/Momntz.Service.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="PostSharp" version="3.0.28" targetFramework="net45" />
+  <package id="PostSharp" version="3.0.31" targetFramework="net45" />
   <package id="PostSharp.Patterns.Diagnostics" version="3.0.28" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
 </packages>
