--- a/Source/Momntz.WindowsService/App.config
+++ b/Source/Momntz.WindowsService/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://momntzdev.servicebus.windows.net/;SharedSecretIssuer=owner;SharedSecretValue=TU9SBGWvdxeO6THM8uQrxA9fmJEhTlLHha80rTkNj7Y=" />
@@ -8,4 +8,12 @@
     <clear />
     <add connectionString="Data Source=127.0.0.1;Initial Catalog=LocalMomntz;User Id=momntz;Password=folsom_1;" name="sql" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.WindowsAzure.StorageClient" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
