--- a/Source/Momntz.Service/packages.config
+++ b/Source/Momntz.Service/packages.config
@@ -6,6 +6,7 @@
   <package id="Nancy.Hosting.Self" version="0.17.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
   <package id="PostSharp" version="3.0.31" targetFramework="net45" />
+  <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
   <package id="WindowsAzure.ServiceBus" version="2.1.0.0" targetFramework="net45" />
 </packages>
