--- a/Source/packages/repositories.config
+++ b/Source/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\Momntz\Source\Momntz\packages.config" />
+  <repository path="..\Momntz.Service.Console\packages.config" />
   <repository path="..\Momntz.Service.Plugins\packages.config" />
   <repository path="..\Momntz.Service.Tests\packages.config" />
   <repository path="..\Momntz.Service\packages.config" />
