--- a/Source/Momntz.Service.Plugins/Momntz.Service.Plugins.csproj
+++ b/Source/Momntz.Service.Plugins/Momntz.Service.Plugins.csproj
@@ -50,6 +50,7 @@
     <Reference Include="ChuckConway.Cloud">
       <HintPath>..\..\Dependencies\ChuckConway\ChuckConway.Cloud.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ServiceBus, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Momntz\Dependencies\ChuckConway\Newtonsoft.Json.dll</HintPath>
